--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# large videos - embed with YouTube?
 /src/media/cg/34 - ENGR255_Assign5_Dogfight_RyanH.mp4
 /src/media/gd/20 - Sailing.mp4
 /src/media/gd/21 - Chunks.mp4
