custom switch component

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ryan-heal-portfolio",
-  "homepage": "http://89craft.github.io",
+  "homepage": "http://89craft.github.io/?",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
